# argus

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  crontab  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  entrypoint.py  main.py  pyproject.toml  requirements.txt  secrets.yaml.template  setup.cfg
.github/workflows/: deploy.yaml  pull-request.yaml  run-checks.yaml
argus/: app.py  config.py  db.py  error.py  logger.py  user.py
argus/clients/: forex.py  http.py  telegram.py  test_telegram.py
argus/clients/discogs/: api.py  web.py
argus/clients/http/: client.py
argus/clients/sql/: generic.py  init.sql  sqlite.py
argus/clients/telegram/: client.py  test_client.py
argus/discogs/clients/: api.py  web.py
argus/discogs/models/: condition.py  listing.py  test_listing.py  wantlist.py
argus/models/: discogs.py  test_discogs.py
argus/models/discogs/: condition.py  listing.py  test_listing.py  (+1 more)
argus/resources/: config.py  db.py  discogs.py  logger.py  telegram.py
argus/services/: notification.py
argus/tasks/: abstract.py  add_user.py  clean_lists.py  crawl_async.py  crawl_wantlist.py  find_new_listings.py  find_non_master_releases_in_list.py  scrape_list.py  task_factory.py
argus/telegram/: client.py  messages.py
argus/telegram_/: client.py  messages.py
argus/tests/: conftest.py
config/loki/: config.yaml
data/: argus.db
src/: db.py  discogs.py  entrypoint.py  helpers.py  logger.py  main.py  scraper.py  secrets.py  state.py  telegram.py
src/resources/: config.py  db.py  discogs.py  logger.py  scraper.py  secrets.py  telegram.py
src/sql/: init.sql
src/tasks/: abstract.py  crawl.py  crawl_async.py  task_factory.py
tf/: aws-budget.tf  aws-ec2.tf  aws-rds.tf  aws-vpc.tf  aws.tf  ecr.tf  iam.tf  locals.tf  main.tf  sg.tf  terraform.tfstate.backup  terraform.tfvars.json.template  user-data.bash  variables.tf
tf/aws-ec2-argus/: iam.tf  locals.tf  main.tf  sg.tf  user-data.bash  variables.tf
tf/aws-rds-argus/: locals.tf  main.tf  sg.tf  variables.tf
(+17 files in other folders)
