[tool.poetry]
name = "argus"
description = ""
authors = ["Oliver Meyer"]
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.8.3"
aiohttp-retry = "2.8.3"
beautifulsoup4 = "4.9.3"
click = "8.1.3"
boto3 = "1.26.3"
python3-discogs-client = "2.3.12"
python-telegram-bot = "13.7"
requests = "2.26.0"
retry = "0.9.2"
currency-symbols = "^2.0.3"

[tool.poetry.dev-dependencies]
pytest = "7.4.2"
