[tool.poetry]
name = "argus"
description = ""
authors = ["Oliver Meyer"]
version = "0.0.1"
packages = [{ include = "argus" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.3"
aiohttp-retry = "^2.8.3"
beautifulsoup4 = "^4.9.3"
click = "^8.1.3"
python-telegram-bot = "^21.0.1"
requests = "^2.26.0"
retry = "^0.9.2"
currency-symbols = "^2.0.3"
curl-cffi = "^0.5.10"
sqlmodel = "^0.0.16"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
black = "^24.4.0"
ruff = "^0.3.7"
pytest-asyncio = "^0.23.6"

[tool.ruff]
lint.extend-select = ["I"]
