[tool.poetry]
name = "argus"
description = ""
authors = ["Oliver Meyer"]
version = "0.0.1"
packages = [{ include = "argus" }]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.5"
beautifulsoup4 = "^4.12.3"
click = "^8.1.7"
python-telegram-bot = "^21.4"
requests = "^2.32.3"
currency-symbols = "^2.0.3"
curl-cffi = "^0.7.1"
sqlmodel = "^0.0.21"
retry-async = "^0.1.4"
retry = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.4.2"
ruff = "^0.5.5"
pytest-asyncio = "^0.23.8"

[tool.ruff]
lint.extend-select = ["I"]
