[metadata]
name = argus

[options]
packages = find:
include_package_data = True
install_requires =
    aiohttp==3.8.3
    beautifulsoup4==4.9.3
    click==8.1.3
    boto3==1.26.3
    python3-discogs-client==2.3.12
    python-telegram-bot==13.7
    requests==2.26.0
    retry==0.9.2

[options.package_data]
* = *.sql

[options.entry_points]
console_scripts =
    argus = argus.entrypoint:argus
